trunk/Archive2/ce/822fcbda0f7db9/output
main.cpp: In function 'int main()':
main.cpp:7:12: error: too many initializers for 'A'
     A a{A()};
            ^
main.cpp:7:7: warning: unused variable 'a' [-Wunused-variable]
     A a{A()};
       ^
